# GINCCO_lib

./: .readthedocs.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  __init__.py  environment.yml  example.py  example1_map.py  example2_point_profile.py  import_series_daily.py  map_plot.py  pyproject.toml  structure.txt  update_gincco.sh
docs/: GINCCO_lib.geostrophic_current.rst  GINCCO_lib.heatmap_plot.rst  GINCCO_lib.image_to_video.rst  GINCCO_lib.import_daily.rst  GINCCO_lib.import_series_daily.rst  GINCCO_lib.interpolate_to_t.rst  GINCCO_lib.map_plot.rst  GINCCO_lib.rst  GINCCO_lib.spatial_average.rst  GINCCO_lib.temporal_mean.rst  GINCCO_lib.time_series_plot.rst  add_doctree.py  analysis_functions.rst  conf.py  conf.py.bkk  import_utilities.rst  index.rst  make_function_page.py  modules.rst  requirements.txt  visualization_tools.rst
docs/GINCCO_view/: index.rst  tab_1.rst  tab_2.rst  tab_3.rst  tab_4.rst
docs/_static/: custom.css
docs/docs/: GINCCO_lib.heatmap_plot.rst  GINCCO_lib.image_to_video.rst  GINCCO_lib.import_daily.rst  GINCCO_lib.import_series_daily.rst  GINCCO_lib.rst  GINCCO_lib.temporal_mean.rst  (+1 more)
examples/: compare_grid.py  ex1.py  ex3.py  example10_map_customcoastline.py  example1_map.py  example2_point_profile.py  example3_profile_heatmap.py  example4_video.py  example5_map_hybrid_depth.py  example5_section_heatmap.py  example6_map_debug.py  example6_wind_map.py  example7_geotrophic_current.py  example7_section_heatmap.py  example8_salinity_average.py  example9_temporal_average.py  toto.py  veloc1.nc  view2_font_preview.py  view_font_preview.py
(+193 files in other folders)
